# Spotify-Controller

./: .gitignore  CMakeLists.txt  README.md
src/: MediaSessionController.h  controllers.cpp  main.cpp
